# Ray-tracer

./: Box.cpp  Box.h  CMakeLists.txt  Figure.cpp  Figure.h  Functions.cpp  Functions.h  Header.h  Light.cpp  Light.h  README.md  Screen.cpp  Screen.h  Spectator.cpp  Spectator.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  Vector3d.cpp  Vector3d.h  Vector_3_float.cpp  Vector_3_float.h  data.txt  main.cpp
